--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "tailwindcss": "^3.4.1"
   },
   "dependencies": {
-    "next": "^15.0.3",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.2.0",
+    "lottie-react": "^2.4.0",
+    "next": "^15.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0"
